K8-Questions/10-Schedule-pod.yaml
# Task -
# Schedule a Pod as follows:
# ✑ Name: kucc8
# ✑ App Containers: 2
# ✑ Container Name/Images:
# - nginx
# - consul 

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-kusc00401
  name: nginx-kusc00401
spec:
  containers:
  - image: nginx
    name: nginx-kusc00401
  nodeSelector:
    disk: ssd
