K8-Questions/16-Persistent-vol-claim.yaml
# Task -
# Create a new PersistentVolumeClaim:
# ✑ Name: pv-volume
# ✑ Class: csi-hostpath-sc
# ✑ Capacity: 10Mi
# Create a new Pod which mounts the PersistentVolumeClaim as a volume:
# ✑ Name: web-server
# ✑ Image: nginx
# ✑ Mount path: /usr/share/nginx/html
# Configure the new Pod to have ReadWriteOnce access on the volume.
# Finally, using kubectl edit or kubectl patch expand the PersistentVolumeClaim to a capacity of 70Mi and record that change.

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pv-volume
spec:
  storageClassName: csi-hostpath-sc
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 10Mi


apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: pv-volume
  containers:
    - name: task-pv-container
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
