K8-Questions/8-pod-creation.yaml
# Task -
# Schedule a pod as follows:
# ✑ Name: nginx-kusc00401
# ✑ Image: nginx
# ✑ Node selector: disk=ssd 

# kubectl run name=nginx-kusc00401 image=nginx
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-kusc00401
  name: nginx-kusc00401
spec:
  containers:
  - image: nginx
    name: nginx-kusc00401
  nodeSelector:
    disk: ssd
