K8-Questions/17-Ingress.yaml
# Task -
# Create a new nginx Ingress resource as follows:
# ✑ Name: pong
# ✑ Namespace: ing-internal
# ✑ Exposing service hello on path /hello using service port 5678

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 5678
